[gd_scene load_steps=9 format=2]

[ext_resource path="res://Elements/Blocks/StaticBody.gd" type="Script" id=1]
[ext_resource path="res://Elements/PulseCore/PluseCore.gd" type="Script" id=2]
[ext_resource path="res://Art/temp/PulseCore2.png" type="Texture" id=3]
[ext_resource path="res://Art/temp/PulseCore1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="PluseCore" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "1"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 3 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DetectingArea" to="." method="_on_DetectingArea_body_entered"]
[connection signal="body_exited" from="DetectingArea" to="." method="_on_DetectingArea_body_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
